# novel-weaver-studio

./: Enhancements_by_writing_stage.md  Setup.md  docker-compose.yml  implementation_plan.md.resolved  package-lock.json  package.json  tailwind.config.ts  task.md  temporal_guide.md.resolved  walkthrough.md.resolved  walkthroughremoteDocker.md.resolved
Novel_Writing/: Novel_Writing_Workflow_Master_Guide.md  Phase01_Initial_Setup_and_Research.yaml  Phase02_Brainstorming_and_Series_Outline.yaml  Phase03_Call_Sheet_Generation.yaml  Phase04_Characters_and_Worldbuilding.yaml  Phase05_Chapter_Outline_Creation.yaml  Phase06_Single_Chapter_Writing.yaml  Phase07_Final_Manuscript_Compilation.yaml
backend/: .gitignore  API_DOCUMENTATION.md  README.md  pyproject.toml  test_phase1.py  test_phase2.py
backend/src/: __init__.py  config.py  main.py  models.py
backend/src/api/: routes.py  routes.py.backup
backend/src/llm/: __init__.py  provider_manager.py
backend/src/llm/providers/: __init__.py  anthropic_provider.py  google_provider.py  openai_provider.py  openrouter_provider.py
backend/src/vault/: __init__.py  novel_vault.py  storage_manager.py
backend/src/workflows/: activities.py  client.py  phase1_initial_setup.py  phase2_brainstorming.py  phase3_call_sheet.py  phase4_characters.py  phase5_chapter_outline.py  phase5_context_bundle_curation.py  phase5_story_bible.py  phase6_chapter_outline.py  phase6_chapter_writing.py  phase7_chapter_writing.py  phase7_compilation.py  phase8_compilation.py  worker.py
src/: App.tsx  index.css  main.tsx
src/api/: client.ts  hooks.ts  (+1 more)
(+47 files in other folders)
